--- a/index.html
+++ b/index.html
@@ -1098,6 +1098,13 @@
                         <div class="workspace-header">
                             <h2 class="workspace-title"><i class="bi bi-layers-fill"></i>Painel de Montagem</h2>
                             <div class="d-flex gap-2">
+                                <div class="input-group input-group-sm" style="width: 150px;">
+                                    <span class="input-group-text bg-transparent border-secondary"><i
+                                            class="bi bi-search"></i></span>
+                                    <input type="text" class="form-control bg-transparent border-secondary text-light"
+                                        id="loadSearchInput" placeholder="ID Carga..."
+                                        title="Digite o ID curto da carga (ex: 12345)">
+                                </div>
                                 <button class="btn btn-sm btn-magic" onclick="montarTodasAsRotas()"
                                     title="Montar cargas para todas as rotas disponíveis automaticamente">
                                     <i class="bi bi-stars me-1"></i>Auto Montar
