--- a/index.html
+++ b/index.html
@@ -2370,7 +2370,7 @@
     <script src="js/script.js"></script>
     <script src="js/freight_logic.js"></script>
     <!-- Cloud Manager Modal (Unified Global History) -->
-    <div class="modal fade" id="cloudModal" tabindex="-1" aria-hidden="true">
+    <div class="modal fade" id="cloudModal" tabindex="-1">
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content text-bg-dark border-secondary">
                 <div class="modal-header border-secondary">
