--- a/index.html
+++ b/index.html
@@ -1405,7 +1405,7 @@
                                             <div class="legend-item"><span class="legend-color text-success"><i
                                                         class="bi bi-circle-fill"></i></span> Fiorino</div>
                                             <div class="legend-item"><span class="legend-color"
-                                                    style="color: var(--dark-primary);"><i
+                                                    style="color: var(--dark-accent);"><i
                                                         class="bi bi-circle-fill"></i></span> Van</div>
                                             <div class="legend-item"><span class="legend-color text-warning"><i
                                                         class="bi bi-circle-fill"></i></span> 3/4</div>
