--- a/index.html
+++ b/index.html
@@ -1124,15 +1124,16 @@
                                             class="badge bg-white text-success ms-2 rounded-pill d-none">0</span></button>
                                 </li>
                                 <li class="nav-item" role="presentation"><button class="nav-link tab-van"
-                                        data-bs-toggle="tab" data-bs-target="#van-tab-pane"><i
-                                            class="bi bi-truck"></i>Van <span id="badge-van"
+                                        data-bs-toggle="tab" data-bs-target="#van-pr-tab-pane"><i
+                                            class="bi bi-truck"></i>VAN - 3/4 PR <span id="badge-van-pr"
                                             class="badge bg-white text-primary ms-2 rounded-pill d-none">0</span></button>
                                 </li>
-                                <li class="nav-item" role="presentation"><button class="nav-link tab-tres-quartos"
-                                        data-bs-toggle="tab" data-bs-target="#tres-quartos-tab-pane"><i
-                                            class="bi bi-truck-flatbed"></i>3/4 <span id="badge-tres-quartos"
-                                            class="badge bg-white text-dark ms-2 rounded-pill d-none">0</span></button>
+                                <li class="nav-item" role="presentation"><button class="nav-link tab-van"
+                                        data-bs-toggle="tab" data-bs-target="#van-sp-tab-pane"><i
+                                            class="bi bi-truck"></i>VAN - 3/4 SP <span id="badge-van-sp"
+                                            class="badge bg-white text-primary ms-2 rounded-pill d-none">0</span></button>
                                 </li>
+
                                 <li class="nav-item" role="presentation"><button class="nav-link tab-toco"
                                         data-bs-toggle="tab" data-bs-target="#toco-tab-pane"><i
                                             class="bi bi-boxes"></i>Toco <span id="badge-toco"
@@ -1192,48 +1193,52 @@
                                     <hr class="no-print">
                                     <div id="resultado-fiorino-geral" class="mt-3"></div>
                                 </div>
-                                <div class="tab-pane fade workspace-tab-pane" id="van-tab-pane" role="tabpanel">
+                                <div class="tab-pane fade workspace-tab-pane" id="van-pr-tab-pane" role="tabpanel">
                                     <div
                                         class="d-flex flex-wrap justify-content-between align-items-center mb-3 no-print gap-2">
                                         <p class="card-subtitle text-body-secondary small mb-0">Selecione uma rota
-                                            para montar as Vans ou utilize as opções de exportação.</p>
+                                            <strong>(Paraná)</strong> para montar as cargas de Van.
+                                        </p>
                                         <div class="btn-group">
                                             <!-- Botão de Exportar Sobras removido a pedido do usuário -->
                                             <button class="btn btn-primary"
-                                                onclick="imprimirCargasGeneric('resultado-van-geral', 'Cargas de Van (Varejo)')">
+                                                onclick="imprimirCargasGeneric('resultado-van-pr', 'Cargas de Van - PR')">
                                                 <i class="bi bi-printer-fill me-1"></i>IMPRIMIR CARGAS MONTADAS
                                             </button>
                                         </div>
                                     </div>
-                                    <div class="mb-3 no-print" id="botoes-van">
+                                    <div class="mb-3 no-print" id="botoes-van-pr">
                                         <div class="empty-state"><i class="bi bi-truck-front-fill"></i>
-                                            <p>Nenhuma rota de Van disponá­vel. Processe um arquivo para comeá§ar.</p>
+                                            <p>Nenhuma rota de Van (PR) disponível. Processe um arquivo para começar.
+                                            </p>
                                         </div>
                                     </div>
                                     <hr class="no-print">
-                                    <div id="resultado-van-geral" class="mt-3"></div>
+                                    <div id="resultado-van-pr" class="mt-3"></div>
                                 </div>
-                                <div class="tab-pane fade workspace-tab-pane" id="tres-quartos-tab-pane"
-                                    role="tabpanel">
+                                <div class="tab-pane fade workspace-tab-pane" id="van-sp-tab-pane" role="tabpanel">
                                     <div
                                         class="d-flex flex-wrap justify-content-between align-items-center mb-3 no-print gap-2">
                                         <p class="card-subtitle text-body-secondary small mb-0">Selecione uma rota
-                                            para montar as cargas 3/4.</p>
+                                            <strong>(São Paulo)</strong> para montar as cargas de Van.
+                                        </p>
                                         <div class="btn-group">
                                             <button class="btn btn-primary"
-                                                onclick="imprimirCargasGeneric('resultado-34-geral', 'Cargas de 3/4 (Varejo)')">
+                                                onclick="imprimirCargasGeneric('resultado-van-sp', 'Cargas de Van - SP')">
                                                 <i class="bi bi-printer-fill me-1"></i>IMPRIMIR CARGAS MONTADAS
                                             </button>
                                         </div>
                                     </div>
-                                    <div class="mb-3 no-print" id="botoes-34">
-                                        <div class="empty-state"><i class="bi bi-truck-flatbed"></i>
-                                            <p>Nenhuma rota de 3/4 disponá­vel. Processe um arquivo para comeá§ar.</p>
+                                    <div class="mb-3 no-print" id="botoes-van-sp">
+                                        <div class="empty-state"><i class="bi bi-truck-front-fill"></i>
+                                            <p>Nenhuma rota de Van (SP) disponível. Processe um arquivo para começar.
+                                            </p>
                                         </div>
                                     </div>
                                     <hr class="no-print">
-                                    <div id="resultado-34-geral" class="mt-3"></div>
+                                    <div id="resultado-van-sp" class="mt-3"></div>
                                 </div>
+
                                 <div class="tab-pane fade" id="toco-tab-pane" role="tabpanel">
                                     <div
                                         class="d-flex flex-wrap justify-content-between align-items-center mb-3 no-print gap-2">
